Made function "search by IngredientName"
