# routes/recipes.js
@@ -8,6 +8,6 @@ recipeRouter.get("/", ctrl.getRecipes);
 recipeRouter.get("/:recipeId", ctrl.getRecipeById);
 recipeRouter.get("/search/:title", ctrl.getRecipesByTitle);
 recipeRouter.get("/categories/:category", ctrl.getRecipesByCategory);
-recipeRouter.get("/ingredients/:ingredientName", ctrl.getRecipesByIngredient);
+recipeRouter.get("/ingredients/:ingredientName", ctrl.getRecipesByIngredientName);
 recipeRouter.post("/", uploadRecipe.single("file"), ctrl.addRecipe);
 recipeRouter.delete("/:recipeId", ctrl.deleteRecipeById);
